force-app/main/default/objects/M_dulo__c/M_dulo__c.object-meta.xml
<CustomObject>
    <label>Módulo</label>
    <nameField>
        <label>Nombre de Módulo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Módulos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>