force-app/main/default/objects/M_dulo__c/fields/Intentos_de_certificacion_permitidos__c.field-meta.xml
<CustomField>
    <fullName>Intentos_de_certificacion_permitidos__c</fullName>
    <label>Intentos de certificación permitidos</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>