force-app/main/default/objects/M_dulo__c/fields/Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Proyecto__c</fullName>
    <label>Proyecto</label>
    <type>Url</type>
</CustomField>