force-app/main/default/objects/M_dulo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tipo_de_certificaci_n__c</columns>
    <columns>Certificaci_n__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>